--- a/assets/estilo/style.css
+++ b/assets/estilo/style.css
@@ -201,3 +201,57 @@ h4 {
     color: var(--cor-padrao);
 }
 
+.menu-celular {
+    height: 28px;
+    width: 28px;
+    margin-left: 20px;
+    display: none;
+}
+
+/*---------- MENU CELULAR ----------*/
+
+@media only screen and (max-width:800px){
+    nav ul {
+        position: absolute;
+        top: 70px;
+        left: 0;
+        background: var(--cor-btn-fonte);
+        width: 100%;
+        overflow: hidden;
+        transition: max-height 0.5s;
+
+    }
+
+    nav ul li {
+        display: block;
+        margin-top: 10px;
+        margin-right: 50px;
+        margin-bottom: 10px;
+    }
+
+    nav ul li a{
+        color: var(--cor-fonte);
+    }
+
+    .menu-celular {
+        display: block;
+        cursor: pointer;
+    }
+}
+
+/*---------- CELULAR 600 ----------*/
+@media only screen and (max-width:600px){
+    .linha {
+        text-align: center;
+    }
+
+    .col-2,.col-3,.col-4 {
+        flex-basis: 100%;
+    }
+
+    .col-2 h1 {
+        font-size: 27px;
+    }
+
+    
+}
