--- a/assets/estilo/style.css
+++ b/assets/estilo/style.css
@@ -198,6 +198,7 @@ nav ul li a:hover {
     width: 100%;
     object-fit: contain;
     object-position: center;
+    border-radius: 10px;
 }
 
 .col-4:hover {
