--- a/assets/estilo/produtos.css
+++ b/assets/estilo/produtos.css
@@ -185,12 +185,12 @@ main {
 }
 
 /* Grid de Produtos */
-.grid-produtos {
+/* .grid-produtos {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
     gap: 2rem;
     padding: 1rem 0;
-}
+} */
 
 /* Cards de Produto */
 /* .produto-card {
