--- a/assets/estilo/produtos.css
+++ b/assets/estilo/produtos.css
@@ -227,6 +227,7 @@ main {
     font-size: 0.9rem;
     margin-bottom: 1rem;
     display: -webkit-box;
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
